--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,7 +108,7 @@ h1 {
 
 .preview {
     width: 100%;
-    min-height: 500px;
+    height: 500px;
     border: 1px solid #ddd;
     border-radius: 8px;
     align-items: flex-start;
